chore(ci): add AWS elasticsearch compability step
related to #OPT-1857