@@ -2,8 +2,13 @@
 
 // general properties for CI execution
 def static NODE_POOL() { return "slaves" }
+
 def static MAVEN_DOCKER_IMAGE() { return "maven:3.5.3-jdk-8-slim" }
-def static CAMBPM_DOCKER_IMAGE(String cambpmVersion) { return "registry.camunda.cloud/camunda-bpm-platform-ee:${cambpmVersion}" }
+
+def static CAMBPM_DOCKER_IMAGE(String cambpmVersion) {
+  return "registry.camunda.cloud/camunda-bpm-platform-ee:${cambpmVersion}"
+}
+
 def static ELASTICSEARCH_DOCKER_IMAGE(String esVersion) {
   return "docker.elastic.co/elasticsearch/elasticsearch-oss:${esVersion}"
 }
@@ -111,6 +116,90 @@ spec:
 """
 }
 
+static String mavenElasticsearchAWSIntegrationTestAgent(cambpmVersion = '7.10.0') {
+  return """
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    agent: optimize-ci-build
+spec:
+  nodeSelector:
+    cloud.google.com/gke-nodepool: ${NODE_POOL()}
+  tolerations:
+    - key: "${NODE_POOL()}"
+      operator: "Exists"
+      effect: "NoSchedule"
+  imagePullSecrets:
+    - name: registry-camunda-cloud-secret
+  volumes:
+  - name: cambpm-config
+    configMap:
+      # Defined in: https://github.com/camunda-ci/k8s-infrastructure/tree/master/infrastructure/ci-30-162810/deployments/optimize
+      name: ci-optimize-cambpm-config
+  initContainers:
+    - name: init-sysctl
+      image: busybox
+      imagePullPolicy: Always
+      command: ["sysctl", "-w", "vm.max_map_count=262144"]
+      securityContext:
+        privileged: true
+  containers:
+  - name: maven
+    image: ${MAVEN_DOCKER_IMAGE()}
+    command: ["cat"]
+    tty: true
+    env:
+      # every JVM process will get a 1/4 of HEAP from total memory
+      - name: JAVA_TOOL_OPTIONS
+        value: |
+          -XX:+UnlockExperimentalVMOptions
+          -XX:+UseCGroupMemoryLimitForHeap
+      - name: LIMITS_CPU
+        valueFrom:
+          resourceFieldRef:
+            resource: limits.cpu
+      - name: TZ
+        value: Europe/Berlin
+      - name: DOCKER_HOST
+        value: tcp://localhost:2375
+    resources:
+      limits:
+        cpu: 3
+        memory: 3Gi
+      requests:
+        cpu: 3
+        memory: 3Gi
+  - name: cambpm
+    image: ${CAMBPM_DOCKER_IMAGE(cambpmVersion)}
+    env:
+      - name: JAVA_TOOL_OPTIONS
+        value: |
+          -XX:+UnlockExperimentalVMOptions
+          -XX:+UseCGroupMemoryLimitForHeap
+          -XX:MaxRAMFraction=1
+      - name: TZ
+        value: Europe/Berlin
+    resources:
+      limits:
+        cpu: 1
+        memory: 1Gi
+      requests:
+        cpu: 1
+        memory: 1Gi
+    volumeMounts:
+    - name: cambpm-config
+      mountPath: /camunda/conf/bpm-platform.xml
+      subPath: bpm-platform.xml
+    - name: cambpm-config
+      mountPath: /camunda/conf/tomcat-users.xml
+      subPath: tomcat-users.xml
+    - name: cambpm-config
+      mountPath: /camunda/webapps/manager/META-INF/context.xml
+      subPath: context.xml
+"""
+}
+
 void buildNotification(String buildStatus) {
   // build status of null means successful
   buildStatus = buildStatus ?: 'SUCCESS'
@@ -128,18 +217,37 @@ void buildNotification(String buildStatus) {
 }
 
 void runMaven(String cmd) {
-  sh ("mvn ${cmd} -s settings.xml -B --fail-at-end -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn")
+  sh("mvn ${cmd} -s settings.xml -B --fail-at-end -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn")
 }
 
-void integrationTestSteps() {
+void gitCheckoutOptimize() {
   git url: 'git@github.com:camunda/camunda-optimize',
           branch: "${params.BRANCH}",
           credentialsId: 'camunda-jenkins-github-ssh',
           poll: false
+}
+
+void integrationTestSteps() {
+  gitCheckoutOptimize()
   container('maven') {
     runMaven("verify -Dskip.docker -Pproduction,it,engine-latest -pl backend,upgrade -am -T\$LIMITS_CPU")
   }
 }
+
+void integrationTestStepsAWS() {
+  gitCheckoutOptimize()
+
+  container('maven') {
+    sh("""
+      cp .ci/podSpecs/elasticsearchAWS/environment-config.yaml backend/src/main/resources
+      
+      curl -s 'https://vpc-optimize-es-test1-mniyd6oio2w5hhzrkncykqg36e.eu-central-1.es.amazonaws.com/_cat/indices?v'
+      curl -XDELETE https://vpc-optimize-es-test1-mniyd6oio2w5hhzrkncykqg36e.eu-central-1.es.amazonaws.com/_all
+      """)
+    runMaven("verify -Dskip.docker -Pproduction,it,engine-latest -pl backend,upgrade -am -T\$LIMITS_CPU")
+  }
+}
+
 
 pipeline {
 
@@ -206,6 +314,24 @@ pipeline {
           }
           steps {
             integrationTestSteps()
+          }
+          post {
+            always {
+              junit testResults: 'backend/target/failsafe-reports/**/*.xml', allowEmptyResults: true, keepLongStdio: true
+            }
+          }
+        }
+        stage("Elasticsearch AWS Integration") {
+          agent {
+            kubernetes {
+              cloud 'optimize-ci'
+              label "optimize-ci-build_es-AWS_${env.JOB_BASE_NAME}-${env.BUILD_ID}"
+              defaultContainer 'jnlp'
+              yaml mavenElasticsearchAWSIntegrationTestAgent()
+            }
+          }
+          steps {
+            integrationTestStepsAWS()
           }
           post {
             always {
